# demonstration

./: CMakeLists.txt  basedevice.hpp  main.cpp  operator.hpp  udpconnection.cpp  udpconnection.hpp
FGPA_Interface/: .gitignore  CMakeLists.txt  README.md  basedevice.cpp  operator.cpp  operator.hpp  udpconnection.cpp  udpconnection.hpp
FGPA_Interface/client/: client.cpp  client.hpp  main_client.cpp
FGPA_Interface/server/: main_server.cpp  server.cpp  server.hpp
client/: client.cpp  client.hpp
server/: server.cpp  server.hpp
